# dl_surface_classification

./: README.md  pyproject.toml
configs/datasets/: belyaev_kushnarev.json  boreal_imu.json  boreal_pro.json  kedzierski_4W.json  kedzierski_6W.json
models/: cnn.py  mamba.py  rnn.py  transformer.py  transformer_cross_attn.py  transformer_full_seq.py
models/configs/: mamba_config.py  transformer_cross_attn_config.py
models/utils/: cross_attn.py
python/: define_feature_groups.py  eval_seq.py  eval_to_csv.py  optimize_seq.py  prep_dataset.py  run_optimization.py  run_train.py  run_train_parallel.py  train_seq.py
python/cnn/: optimize_cnn.py  train_cnn.py  utils.py
python/cnn_manual/: train_cnn_manual.py
python/mamba/: optimize_mamba.py  train_mamba.py
python/rnn/: optimize_rnn.py  optimize_rnn_cv.py  run_rnn_optimization.py  run_rnn_train.py  train_rnn.py
python/transformer/: optimize_transformer.py  train_transformer.py
python/transformer_cross_attn/: optimize_transformer_cross_attn.py  train_transformer_cross_attn.py
python/transformer_full_seq/: optimize_transformer_full_seq.py  train_transformer_full_seq.py
python/utils/: dataset.py  eval_utils.py  model_hash.py  net_utils.py  optimization_utils.py  plot_utils.py  save_load.py
scripts/: aggregate_results_to_table.py  eval_to_csv.py  evaluate.py  get_stats_from_cache.py  optimize.py  prep_data.py  prepare_raw_data.py  train.py  visualize_belyaev_kushnarev.py  visualize_main.py
src/data/: manipulation.py  processing.py
src/engine/: evaluator.py  optimizer.py  trainer.py
src/models/: factory.py  (+1 more)
(+55 files in other folders)
